# Monitorizer

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  install.sh  monitor.py  pyproject.toml  requirements.txt  version  version.yaml  watch_list  webserver-entrypoint.sh
conf/: nginx.conf
config/: amass.ini  default.json  default.yaml  test.json
core/: acunetix.py  additional.py  arguments.py  cli.py  dns.py  flags.py  globals.py  monitorizer.py  multitask.py  parser.py  report.py
docs/: get_started.md
events/: app_mention.py  on.py  templates.py  utils.py
ext/dnsrecon/: dnsrecon.py
ext/masscan/: masscan
ext/subbrute/: names.txt
handlers/: on.py
modules/event/: on.py
modules/nuclei/: api.py  templates.py
modules/parsers/: scan.py
modules/portscan/: scanner.py
modules/report/: acunetix.py  all.py  local.py  slack.py
modules/resolvers/: dns.py
modules/server/: server.py  templates.py  utils.py
monitorizer/: __init__.py  arguments.py  cmd.map  configure.py  default.yml  flags.py  functions.py  globals.py  helpers.py  manage.py  scanner.py  settings.py
monitorizer/core/: config.py  main.py  multitask.py
monitorizer/dnsrecon/: subdomains-100.txt
monitorizer/inventory/: admin.py  apps.py  callback.py  models.py  tasks.py
monitorizer/report/: admin.py  apps.py  models.py  tasks.py
monitorizer/server/: __init__.py  admin.py  apps.py  asgi.py  celery.py  models.py  settings.py  urls.py  wsgi.py
monitorizer/templates/admin/: index.html
monitorizer/ui/: arguments.py  cli.py
monitorizer/utils/: engine.py
(+25 files in other folders)
